--- a/app/src/main/res/layout/layout_image_detail.xml
+++ b/app/src/main/res/layout/layout_image_detail.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imgPreviewDetail"
                 android:layout_marginTop="@dimen/dp_10"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sp_20"
