image centered in detail page

--- a/app/src/main/res/layout/layout_image_detail.xml
+++ b/app/src/main/res/layout/layout_image_detail.xml
@@ -22,12 +22,13 @@
             <ImageView
                 android:id="@+id/imgPreviewDetail"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_150"
+                android:layout_height="0dp"
                 android:layout_marginTop="0dp"
                 android:src="@drawable/bg_splash_launcher"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <TextView
                 android:id="@+id/tvTitle"
@@ -37,7 +38,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="@dimen/dp_10"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_20"
                 />
 
@@ -49,7 +50,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_16"
                 />
 
@@ -61,7 +62,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvCopyright"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_16"
                 />
 
@@ -73,7 +74,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvDate"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_16"
                 />
 
@@ -85,7 +86,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvExplanation"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_16"
                 />
 
@@ -97,7 +98,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvHdUrl"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_16"
                 />
 
@@ -108,7 +109,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvMediaType"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
+                android:textColor="@color/green"
                 android:textSize="@dimen/sp_16"
                 />
 
